[tool.poetry]
name = "pyfdec"
version = "0.1.0"
description = "A libary for reading and writing to SWF files"
authors = ["Bucccket"]
readme = "README.md"
license = "GPL-3.0"
packages = [
  { include = "pyfdec" }
]

[tool.poetry.dependencies]
python = "^3.11"
bitarray = "^2.9.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"

[tool.isort]
multi_line_output = 5
line_length = 120

[tool.pyright]
# General configuration
include = ["pyfdec"]
exclude = ["tests"]

typeCheckingMode = "basic"  # Options: "off", "basic", "strict"
enablePrimitiveUnion = false  # Whether to check for primitive unions (e.g., `int | str`)
reportGeneralTypeIssues = true
reportUnknownVariableType = true
reportMissingTypeStubs = true

# Specific configurations for files
[tool.pyright.files]
useLibraryCodeForTypes = true  # Use stub files or code from libraries

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
